--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 <body>
 
     <div class="overlay"></div>
-
     <div class="left-side">
 
         <span class="logo">fashion</span>
@@ -58,7 +57,25 @@
         </div>
 
     </div>
-
     </div>
+    <div class="left-side">
+        <img src="img/img1.jpg" alt="" class="backdrop-img">
+        <div class="content">
+            <div class="detail-product">
+                <h1 class="product-name">yellow trucksuit</h1>
+                <p class="product-des">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore illum, ipsam qui nisi quis ea adipisci maiores aperiam ad consectetur atque tempora, quisquam in officia veniam voluptatum modi nulla molestiae.
+                </p>
+                <a href="#" class="buy-btn">compra ahora</a>
+                <button class="nxt-btn">
+                    <img src="img/arrow.png">
+                </button>
+            </div>
+            <div class="product-img-container">
+                <img src="img/img1.jpg" class="product-img">
+            </div>
+        </div>
+    </div>
+    <script src="./js/app.js"></script>
 </body>
 </html>
